---
title: ItemTracker DB
---
erDiagram
    Company {
        uid id pk
        string name
    }

    Location {
        uid id pk
        string name
        string external_id
        company company fk
    }

    Item {
        uid id pk
        string external_id
        string url
        company company fk
    }

    ItemStock {
        uid id pk
        int stock
        Location location fk
        Item item fk
    }

    Company ||--o{ Location: has
    Location ||--o{ Item: stores
    Location ||--o{ ItemStock: has
    Item ||--o{ ItemStock: has 